--- a/style.css
+++ b/style.css
@@ -22,25 +22,67 @@ h1 {
 }
 
 p {
-  line-height: 0.4em;
+  line-height: 1.5em;
 }
 
 .navigation {
   background-color: rgba(255, 255, 255, 0.9);
-  border: 1px solid black;
   margin-left: 10%;
   /*height: auto;*/
   padding: 5% 5% 0% 5%;
   text-align: center;
   position: fixed;
+  height: 100%;
   /*z-index: 999;*/
 }
+
+ 
+       a {
+            
+            border-radius: 50px;
+            color:white;
+            text-decoration: none;
+            background: #c3b594;
+            display: inline-block;
+            padding: 20px 10px;
+            font-size: 1.2em;
+            text-transform: uppercase;
+       }
+            a:hover {
+                transition: all 0.4s ease;
+                text-decoration: none;
+                background: #b7a78a;
+            }
+       
+
+       
+
 .bottom_bar {
   background-color: #c3b59b;
-  height: 10%;
+  height: 7%;
   width: 100%;
   position: fixed;
   z-index: 100; 
   bottom: 0; 
   left: 0;
+  margin: auto;
+}
+
+#left {
+  float: left;
+  padding: 0.5em 0.5em;
+  color: white;
+  left: 0;
+  font-size: 0.8em;
+  font-weight: 100;
+}
+
+#center {
+  float: top;
+  padding-top: 0.5em;
+  color: white;
+  margin-left: 20%;
+  font-size: 0.8em;
+  font-weight: 100;
+   
 }
