--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
     color: #72695d;
+	  border: 1px solid transparent;
 }
 
 html, body {
@@ -15,6 +16,11 @@ body {
     background-attachment: fixed;
     overflow: hidden;
     margin: 0px; padding: 0px;
+}
+
+.popup_bg {
+  background-image: none;
+  background-color: white;
 }
 
 h1 {
@@ -51,13 +57,15 @@ img {
 .button {
   border-radius: 50px;
   color:white;
+  width: 12em;
   text-decoration: none;
   background: #c3b594;
   display: inline-block;
-  padding: 0.6em 0.4em;
-  font-size: 1.2em;
+  padding: 0.6em 0.1em;
+  font-size: 1em;
   text-transform: uppercase;
-  }
+  text-align: center;
+}
 
 .button:hover {
   transition: all 0.4s ease;
@@ -77,27 +85,15 @@ li {
 .sign {
   padding-bottom: 1em;
 }
-
-       
-
+  
 footer {
   position: absolute;
   overflow: auto;
   right: 0;
   bottom: 0;
   left: 0;
-  
   height: 6%;
   background-color: #c3b59b;
-  
-  /*background-color: #c3b59b;
-  height: 7%;
-  width: 100%;
-  position: fixed;
-  z-index: 100; 
-  bottom: 0; 
-  left: 0;
-  margin: auto;*/
 }
 
 footer:hover {
@@ -129,4 +125,70 @@ footer:hover {
   margin-left: 20%;
   font-size: 0.8em;
   font-weight: 100;   
+}
+
+#popup_heading {
+  position: absolute;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, 0%);
+
+}
+#popup_line {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+input {
+  width: 100%;
+  border-radius: 3px;
+  border-color: #b7a78a;
+  padding: 0.1em 0.1em;
+  font-size: 1.2em;
+}
+
+.input_name {
+  margin-bottom: 0em;
+}
+
+/* Hide up and down arrows on number input field. */
+input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+textarea {
+  width: 100%;
+  height: 8.6em;
+  border-radius: 4px;
+  border-color: #b7a78a;
+  resize: none;
+  display: block;
+  font-size: 1.2em;
+}
+
+#form {
+  margin-top: 6em;
+	width: 45em;
+  height: 14em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#form_left {
+  width: 22em;
+  float: left;
+}
+
+#form_right {
+  width: 22em;
+  float: right;
+}
+
+#form_button {
+  position: absolute;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, 0%);
 }
