--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
     color: #72695d;
-	  border: 1px solid transparent;
+	  border: 1px solid black;
 }
 
 html, body {
@@ -42,7 +42,7 @@ p {
   text-align: center;
   position: fixed;
   height: 100%;
-  /*z-index: 999;*/
+  overflow: scroll;
 }
 
 img {
@@ -174,6 +174,7 @@ textarea {
   height: 14em;
   margin-left: auto;
   margin-right: auto;
+  overflow: auto;
 }
 
 #form_left {
