--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
     color: #72695d;
-	  border: 1px solid black;
+	  /*border: 1px solid black;*/
 }
 
 html, body {
@@ -42,7 +42,7 @@ p {
   text-align: center;
   position: fixed;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 img {
@@ -128,6 +128,7 @@ footer:hover {
 }
 
 #popup_heading {
+  top: 1em;
   position: absolute;
   left: 50%;
   margin-right: -50%;
@@ -143,7 +144,7 @@ footer:hover {
 input {
   width: 100%;
   border-radius: 3px;
-  border-color: #b7a78a;
+  border: 1px solid #c3b59b;
   padding: 0.1em 0.1em;
   font-size: 1.2em;
 }
@@ -162,7 +163,7 @@ textarea {
   width: 100%;
   height: 8.6em;
   border-radius: 4px;
-  border-color: #b7a78a;
+  border: 1px solid #c3b59b;
   resize: none;
   display: block;
   font-size: 1.2em;
