--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 html, body {
-  height: 100%;
+  /*height: 100%;*/
 }
 
 body {
@@ -21,6 +21,7 @@ body {
 .popup_bg {
   background-image: none;
   background-color: white;
+  overflow: auto;
 }
 
 h1 {
@@ -37,7 +38,6 @@ p {
 .navigation {
   background-color: rgba(255, 255, 255, 0.9);
   margin-left: 10%;
-  /*height: auto;*/
   padding: 5% 2% 0% 2%;
   text-align: center;
   position: fixed;
@@ -87,12 +87,12 @@ li {
 }
   
 footer {
-  position: absolute;
-  overflow: auto;
-  right: 0;
+  position: fixed;
+  margin: 0;
   bottom: 0;
+  right: 0;
   left: 0;
-  height: 6%;
+  height: 3em;
   background-color: #c3b59b;
 }
 
@@ -122,7 +122,7 @@ footer:hover {
   float: top;
   padding-top: 0.4em;
   color: white;
-  margin-left: 20%;
+  margin-left: 20em;
   font-size: 0.8em;
   font-weight: 100;   
 }
@@ -193,4 +193,44 @@ textarea {
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, 0%);
+}
+
+@media (max-width: 480px) {
+
+
+.main_container {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 3em; /* height of your footer */
+}
+
+.navigation {
+  margin-left: 2%;
+  margin-right: 2%;
+  padding: 5% 2% 5em 2%;
+  overflow: auto;
+}
+
+footer {
+  overflow: auto;
+  position: absolute;
+  width: 100%;
+  height: 2.5em;
+  display: inline-block;
+}
+
+#footer_center {
+  float: top right;
+  padding-right: 0.4em;
+  font-size: 0.6em; 
+}
+
+#footer_left {
+  font-size: 0.6em;
+}
+
+.sign {
+  padding-top: 2em;
 }
