--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
   padding: 5% 2% 0% 2%;
   text-align: center;
   position: fixed;
-  height: 100%;
+  height: 92%;
   overflow: auto;
 }
 
@@ -92,7 +92,7 @@ footer {
   bottom: 0;
   right: 0;
   left: 0;
-  height: 3em;
+  height: 8;
   background-color: #c3b59b;
 }
 
@@ -224,11 +224,11 @@ footer {
 #footer_center {
   float: top right;
   padding-right: 0.4em;
-  font-size: 0.6em; 
+  font-size: 0.4em; 
 }
 
 #footer_left {
-  font-size: 0.6em;
+  font-size: 0.4em;
 }
 
 .sign {
