--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ footer {
   overflow: auto;
   position: absolute;
   width: 100%;
-  height: 2.5em;
+  height: 8%;
   display: inline-block;
 }
 
