--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ li {
 }
   
 footer {
+  display: flex;
   position: fixed;
   margin: 0;
   bottom: 0;
@@ -110,21 +111,19 @@ footer:hover {
 }
 
 #footer_left {
-  float: left;
   padding: 0.4em 0.4em;
   color: white;
-  left: 0;
   font-size: 0.8em;
   font-weight: 100;
+  margin: auto 0;
 }
 
 #footer_center {
   float: top;
-  padding-top: 0.4em;
   color: white;
-  margin-left: 20em;
   font-size: 0.8em;
-  font-weight: 100;   
+  font-weight: 100; 
+  margin: auto 0 auto 12%;  
 }
 
 #popup_heading {
@@ -217,12 +216,10 @@ footer {
   overflow: auto;
   position: absolute;
   width: 100%;
-  height: 8%;
-  display: inline-block;
+  height: 2.5em;
 }
 
 #footer_center {
-  float: top right;
   padding-right: 0.4em;
   font-size: 0.6em; 
 }
